xidlc/tests/snapshots/codegen_snapshot__openapi__http_envelope.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_envelope.json
===============
{
  "components": {
    "schemas": {
      "ContentType": {
        "enum": [
          "application/json",
          "application/octet-stream",
          "text/plain"
        ],
        "type": "string"
      },
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "FileMeta": {
        "properties": {
          "wrong": {
            "type": "string"
          }
        },
        "required": [
          "wrong"
        ],
        "type": "object"
      },
      "NotFound": {
        "properties": {
          "code": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "NotModified": {
        "type": "object"
      },
      "PreconditionFailed": {
        "properties": {
          "code": {
            "format": "int32",
            "minimum": 0,
            "type": "integer"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "representations.FileDetails": {
        "properties": {
          "label": {
            "type": "string"
          }
        },
        "required": [
          "label"
        ],
        "type": "object"
      },
      "representations.FileMeta": {
        "allOf": [
          {
            "properties": {
              "etag": {
                "type": "string"
              },
              "note": {
                "type": "string"
              },
              "wire_id": {
                "type": "string"
              }
            },
            "required": [
              "wire_id",
              "etag"
            ],
            "type": "object"
          },
          {
            "$ref": "#/components/schemas/representations.FileDetails"
          }
        ]
      },
      "representations.FileResponse": {
        "oneOf": [
          {
            "properties": {
              "meta": {
                "$ref": "#/components/schemas/representations.FileMeta"
              }
            },
            "required": [
              "meta"
            ],
            "type": "object"
          },
          {
            "properties": {
              "raw": {
                "items": {
                  "format": "int32",
                  "minimum": 0,
                  "type": "integer"
                },
                "type": "array"
              }
            },
            "required": [
              "raw"
            ],
            "type": "object"
          },
          {
            "properties": {
              "text": {
                "type": "string"
              }
            },
            "required": [
              "text"
            ],
            "type": "object"
          }
        ]
      }
    }
  },
  "info": {
    "title": "Envelope API",
    "version": "v1"
  },
  "openapi": "3.1.0",
  "paths": {
    "/file": {
      "delete": {
        "operationId": "EnvelopeApi.delete_file",
        "parameters": [
          {
            "in": "header",
            "name": "If-Match",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "204": {
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "412": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/PreconditionFailed"
                }
              }
            },
            "description": "Error: PreconditionFailed",
            "headers": {
              "ETag": {
                "schema": {
                  "type": "string"
                }
              }
            }
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "EnvelopeApi"
        ]
      },
      "get": {
        "operationId": "EnvelopeApi.get_file",
        "parameters": [
          {
            "in": "query",
            "name": "key",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/representations.FileMeta"
                }
              },
              "application/octet-stream": {
                "schema": {
                  "format": "binary",
                  "type": "string"
                }
              },
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/NotFound"
                }
              }
            },
            "description": "Error: NotFound"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "EnvelopeApi"
        ]
      }
    },
    "/fresh": {
      "get": {
        "operationId": "EnvelopeApi.get_fresh",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "304": {
            "description": "Error: NotModified",
            "headers": {
              "ETag": {
                "schema": {
                  "type": "string"
                }
              }
            }
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "EnvelopeApi"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "EnvelopeApi"
    }
  ]
}
